# ProjectStudy_SpeechRecognition

./: .gitignore  README.md  VID_database.py  VID_identify_v5.py  VID_logger.py  VID_main.py  VID_manager.py  VID_system_v2.py  audio_monitor_service.py  identify_ffmpeg.py  m4a-wav.py  main_20250105.py  main_identify.py  main_identify_0309.py  main_identify_ffmpeg.py  main_identify_resnet.py  main_identify_scipy.py  main_identify_v1.py  main_identify_v2.py  main_identify_v3.py  main_identify_v4_weaviate.py  main_identify_v5.py  monitor.py  path_utils.py  pyproject.toml  requirements.txt  speaker_manager.py  speaker_system_v1.py  speaker_system_v2.py  study1.py  test_identify.py
.github/: copilot-instructions.md
20241223/: similarCompare.py  voiceprint.py
ResearchArchives/: 3D_diagram.py
archive/: README.md
embeddingFiles/: 0002_2.npy  0003_1.npy  0009_2.npy  002_1.npy  003_1.npy  003_2.npy  009_2.npy  0209_2.npy  0363_1.npy  0422_1.npy  0601_3.npy  0658_1.npy  0770_1.npy  0915_1.npy  0915_2.npy  209_3.npy  363_1.npy  422_2.npy  601_4.npy  658_1.npy  770_2.npy  A_1.npy  A_5.npy  B_1.npy  B_2.npy  C_2.npy  README.md  S0755_79.npy  n1rn_1.npy  n1vz_1.npy  n2gs_1.npy  n2wf_4.npy  n3hq_2.npy  n4uk_1.npy  n5ww_2.npy  小明_1.npy  羅_1.npy  許_3.npy
models/: README.md
pretrained_models/: README.md
pyannote_20241223/: Euclidean_distance.py  cosine_distance.py  similarCompare.py  voiceprint.py
speechbrain_20241230/: SpeechBrain_identify.py  compare_embedding.py  extract_and_save.py
vectorFile/: 1.npy  5.npy  A_18.npy  C_4.npy  YA_1.npy
weaviate/: 1.py  (+1 more)
(+43 files in other folders)
